fix($stylesheet): Add missing text-align: center for headings on mobile

--- a/src/styles/_section_countdown.scss
+++ b/src/styles/_section_countdown.scss
@@ -7,6 +7,7 @@
   .section__headings {
     @include screen-md-max {
       margin: 0 0 $gutter-width;
+      text-align: center;
 
       .section__heading,
       .section__subheading {
